# guellm

./: .gitignore  README.md  index.html  package-lock.json  package.json  requirements.txt  tailwind.config.js
PoC/: ActionTable.md  hwp_controller.py  llm_client.py  main.py  probe_scan.py
docs/: agent-function-chain-design.md
script/: release.py
src/: App.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: com_dispatch.rs  commands.rs  config.rs  hwp_controller.rs  lib.rs  llm_client.rs  main.rs  tools.rs
src/components/: ChatInterface.tsx  ChatSidebar.tsx  MessageBubble.tsx  SettingsModal.tsx  ToolCallCard.tsx  ToolTestPage.tsx
src/store/: useAppStore.ts
src/styles/: globals.css
src/types/: index.ts
