[package]
name = "guellm"
version = "0.1.0"
description = "굴림 - HWP 문서를 AI로 편집하는 데스크톱 앱"
authors = []
edition = "2021"

[lib]
name = "guellm_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }
anyhow = "1"
thiserror = "1"
dirs = "5"
tokio-util = { version = "0.7", features = ["rt"] }
futures = "0.3"
once_cell = "1"
uuid = { version = "1", features = ["v4"] }

[target.'cfg(windows)'.dependencies]
windows = { version = "0.52", features = [
    "Win32_System_Com",
    "Win32_System_Ole",
    "Win32_System_Variant",
    "Win32_System_DataExchange",
    "Win32_System_Memory",
    "Win32_Foundation",
    "Win32_UI_WindowsAndMessaging",
    "Win32_UI_Accessibility",
] }

[features]
# keep debug builds fast
custom-protocol = ["tauri/custom-protocol"]

[profile.dev]
incremental = true

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "s"
strip = true
